--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   "dependencies": {
     "expo": "^32.0.0",
     "firebase": "^5.8.3",
-    "native-base": "^2.11.0",
+    "native-base": "^2.12.1",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-modal-datetime-picker": "^6.0.0",
     "react-navigation": "^3.3.0"
   },
   "devDependencies": {
