--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-modal-datetime-picker": "^6.0.0",
+    "react-native-progress-circle": "^2.0.1",
     "react-navigation": "^3.3.0"
   },
   "devDependencies": {
